--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,4 +4,4 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&display=swap");
